# opengl-playground

./: .gitignore  3D_test.cpp  GraphicPrimitive.cpp  GraphicPrimitive.h  LineSegment.cpp  LineSegment.h  PointCloud.cpp  PointCloud.h  PolyLine.cpp  PolyLine.h  README.md  basic_vertex.shader  convex_hull.cpp  line_intersection.cpp  load_airfoil.cpp  load_airfoil.h  meson.build  p1_opengl_playground.cpp  p2_opengl_playground.cpp  p3_opengl_playground.cpp  p4_openGL.cpp  p5_openGL.cpp  shader.cpp  shader.h  texture_fragment.frag  texture_veretx.vert  uniform_fragment.frag
assets/shader/: basic_3D.frag  basic_3D.vert  basic_fragment.frag  conv_hull.vert
